<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/folders"
        android:checkableBehavior="single">

        <item
            android:id="@+id/rootDirectory"
            android:checked="true"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/root_drawer" />
        <item
            android:id="@+id/images_selection"
            android:icon="@mipmap/ic_image_black_24dp"
            android:title="@string/images_drawer" />

        <item
            android:id="@+id/music_selection"
            android:icon="@mipmap/ic_headphones_black_24dp"
            android:title="@string/music_drawer" />

        <item
            android:id="@+id/downloads_selection"
            android:icon="@mipmap/ic_download_black_24dp"
            android:title="@string/downloads_drawer" />

    </group>

    <group
        android:id="@+id/settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/settings_drawer"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/settings_drawer" />

    </group>


</menu>